--- a/app/src/main/res/layout-xxhdpi/activity_main.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_main.xml
@@ -26,6 +26,7 @@
                 android:background="@drawable/maroon_overlay_bg">
                 <LinearLayout
                     android:id="@+id/layoutProfile"
+                    android:layout_marginStart="24dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -34,9 +35,10 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="26dp"
+                        android:layout_marginEnd="5dp"
                         android:layout_gravity="center_vertical|end"
                         android:id="@+id/backButton"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         android:src="@drawable/back"/>
                     <TextView
                         android:id="@+id/txtWelcome"
@@ -116,6 +118,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="15sp"
+                    android:textFontWeight="1000"
+                    android:textStyle="bold"
                     android:layout_gravity="start|center_vertical"
                     android:layout_marginEnd="5dp"
                     android:gravity="start|center_vertical"
