--- a/app/src/main/res/layout/activity_delivery_deatails.xml
+++ b/app/src/main/res/layout/activity_delivery_deatails.xml
@@ -206,24 +206,23 @@
                 android:textDirection="locale" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/edittext_background">
-            <Spinner
-                    android:layout_width="match_parent"
-                    android:layout_height="38dp"
-                    android:id="@+id/et_emirates"
+                android:layout_height="wrap_content">
+
+                <Spinner
+                        android:id="@+id/et_emirates"
+                        android:layout_width="match_parent"
+                        android:layout_height="38dp"
+                        android:background="@drawable/attachment_spinner_bg"
 
 
-                    android:gravity="start|center_vertical"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="5dp"
-                    android:layout_gravity="start|center_vertical"
-                    android:layoutDirection="locale"
-                    android:textColor="@color/gray_text_color"
-                    android:textAlignment="viewStart"
-                    android:textDirection="locale" >
+                        android:layout_gravity="start|center_vertical"
+                        android:gravity="start|center_vertical"
+                        android:layoutDirection="locale"
+                        android:textAlignment="viewStart"
+                        android:textColor="@color/gray_text_color"
+                        android:textDirection="locale">
 
-            </Spinner>
+                </Spinner>
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
